// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@querycap-ui/core/macro builder only 1`] = `
"

import { select, theme } from \\"@querycap-ui/core/macro\\";
    
export const headings = {
  h1: select()
    .marginTop(theme.space.s4)
    .marginBottom(1)
    .fontSize(12)
    .fontWeight(theme.fontWeights.bold),
};

    
 ↓ ↓ ↓ ↓ ↓ ↓

import { theme as _theme } from \\"@querycap-ui/core\\";
import { fromTheme as _fromTheme } from \\"@querycap-ui/core\\";
var __macro_generated_ref_0 = {
  name: \\"6xa9h0\\",
  styles: \\"margin-bottom:1px;font-size:12px;\\"
};

var __macro_generated_ref_1 =
/*__THEME_NEED__*/
__macro_generated_t => [__macro_generated_ref_0, {
  marginTop: _fromTheme(_theme.space.s4)(__macro_generated_t),
  fontWeight: _fromTheme(_theme.fontWeights.bold)(__macro_generated_t)
}];

export const headings = {
  h1:
  /*__THEME_NEED__*/
  __macro_generated_ref_1
};  
  "
`;

exports[`@querycap-ui/core/macro complex 1`] = `
"

import {
  colors,
  rgba,
  roundedEm,
  safeTextColor,
  select,
  simpleShadow,
  theme,
  tint,
  tintOrShade,
  transparentize,
} from \\"@querycap-ui/core/macro\\";
import { flow } from \\"lodash\\";
import { base } from \\"./util\\";

const createBtnStyle = ({block, invisible, small}) =>
  select()
    .with(base)
    .position(\\"relative\\")
    .paddingX(block ? 0 : small ? \\"1.2em\\" : \\"1.6em\\")
    .paddingY(flow(theme.state.fontSize, roundedEm(small ? 0.25 : 0.5)))
    .display(block ? \\"block\\" : \\"inline-block\\")
    .alignItems(\\"center\\")
    .outline(\\"none\\")
    .backgroundColor(theme.state.backgroundColor)
    .borderColor(theme.state.borderColor)
    .colorFill(theme.state.color)
    .with(block && select().width(\\"100%\\").justifyContent(\\"center\\"))
    .with(invisible && select().borderColor(\\"transparent\\"))
    .with(select(\\"&:hover\\").opacity(0.9).cursor(\\"pointer\\"))
    .with(select(\\"& > * + *\\").marginLeft(theme.space.s1))
    .with(invisible ? undefined : select(\\"&:active\\").boxShadow(\`inset 0 0.15em 0.3em \${rgba(colors.black, 0.15)}\`))
    .with(
      invisible
        ? undefined
        : select(\\"&:focus\\")
          .outline(0)
          .zIndex(1)
          .boxShadow(flow(theme.state.borderColor, transparentize(0.85), simpleShadow(\\"0 0 0 0.2em\\"))),
    )
    .with(select(\\"&:disabled\\").opacity(0.6).cursor(\\"default\\"));

    
 ↓ ↓ ↓ ↓ ↓ ↓

import { transparentize as _transparentize } from \\"@querycap-ui/core\\";
import { theme as _theme } from \\"@querycap-ui/core\\";
import { simpleShadow as _simpleShadow } from \\"@querycap-ui/core\\";
import { fromTheme as _fromTheme } from \\"@querycap-ui/core\\";
import { selectKeys as _selectKeys } from \\"@querycap-ui/core\\";
import { roundedEm as _roundedEm } from \\"@querycap-ui/core\\";
import { rgba as _rgba } from \\"@querycap-ui/core\\";
import { colors as _colors } from \\"@querycap-ui/core\\";
import { flow } from \\"lodash\\";
import { base } from \\"./util\\";
var __macro_generated_ref_0 = {
  name: \\"1w92t4z\\",
  styles: \\"opacity:0.6;cursor:default;\\"
};
var __macro_generated_ref_1 = {
  [_selectKeys(\\"&:disabled\\")]: __macro_generated_ref_0
};
var __macro_generated_ref_2 = {
  name: \\"1pqorvt\\",
  styles: \\"outline:0;z-index:1;\\"
};

var __macro_generated_ref_3 =
/*__THEME_NEED__*/
__macro_generated_t => ({
  [_selectKeys(\\"&:focus\\")]: [__macro_generated_ref_2, {
    boxShadow: _fromTheme(flow(_theme.state.borderColor, _transparentize(0.85), _simpleShadow(\\"0 0 0 0.2em\\")))(__macro_generated_t)
  }]
});

var __macro_generated_ref_4 =
/*__THEME_NEED__*/
__macro_generated_t => ({
  [_selectKeys(\\"&:active\\")]: {
    boxShadow: _fromTheme(\`inset 0 0.15em 0.3em \${_rgba(_colors.black, 0.15)}\`)(__macro_generated_t)
  }
});

var __macro_generated_ref_5 =
/*__THEME_NEED__*/
__macro_generated_t => ({
  [_selectKeys(\\"& > * + *\\")]: {
    marginLeft: _fromTheme(_theme.space.s1)(__macro_generated_t)
  }
});

var __macro_generated_ref_6 = {
  name: \\"1s1p9w1\\",
  styles: \\"opacity:0.9;cursor:pointer;\\"
};
var __macro_generated_ref_7 = {
  [_selectKeys(\\"&:hover\\")]: __macro_generated_ref_6
};
var __macro_generated_ref_8 = {
  name: \\"roftna\\",
  styles: \\"border-color:transparent;\\"
};
var __macro_generated_ref_9 = {
  name: \\"199w7gr\\",
  styles: \\"width:100%;justify-content:center;\\"
};
var __macro_generated_ref_10 = {
  name: \\"v0rj7v\\",
  styles: \\"position:relative;align-items:center;outline:none;\\"
};

var __macro_generated_ref_11 = (block, small, invisible) =>
/*__THEME_NEED__*/
__macro_generated_t => [_fromTheme(base)(__macro_generated_t), __macro_generated_ref_10, {
  paddingLeft: _fromTheme(block ? 0 : small ? \\"1.2em\\" : \\"1.6em\\")(__macro_generated_t),
  paddingRight: _fromTheme(block ? 0 : small ? \\"1.2em\\" : \\"1.6em\\")(__macro_generated_t),
  paddingTop: _fromTheme(flow(_theme.state.fontSize, _roundedEm(small ? 0.25 : 0.5)))(__macro_generated_t),
  paddingBottom: _fromTheme(flow(_theme.state.fontSize, _roundedEm(small ? 0.25 : 0.5)))(__macro_generated_t),
  display: _fromTheme(block ? \\"block\\" : \\"inline-block\\")(__macro_generated_t),
  backgroundColor: _fromTheme(_theme.state.backgroundColor)(__macro_generated_t),
  borderColor: _fromTheme(_theme.state.borderColor)(__macro_generated_t),
  color: _fromTheme(_theme.state.color)(__macro_generated_t),
  fill: _fromTheme(_theme.state.color)(__macro_generated_t)
}, block && __macro_generated_ref_9, invisible && __macro_generated_ref_8, _fromTheme(__macro_generated_ref_7)(__macro_generated_t), _fromTheme(
/*__THEME_NEED__*/
__macro_generated_ref_5)(__macro_generated_t), _fromTheme(
/*__THEME_NEED__*/
invisible ? undefined :
/*__THEME_NEED__*/
__macro_generated_ref_4)(__macro_generated_t), _fromTheme(
/*__THEME_NEED__*/
invisible ? undefined :
/*__THEME_NEED__*/
__macro_generated_ref_3)(__macro_generated_t), _fromTheme(__macro_generated_ref_1)(__macro_generated_t)];

const createBtnStyle =
/*__THEME_NEED__*/
({
  block,
  invisible,
  small
}) =>
/*__THEME_NEED__*/
__macro_generated_ref_11(block, small, invisible);  
  "
`;

exports[`@querycap-ui/core/macro flow 1`] = `
"

import React from \\"react\\"
import { flow } from \\"lodash\\"
import { select, theme } from \\"@querycap-ui/core/macro\\"

const C = () => {
  const v = \\"red\\"

  return (
    <>
      <div css={select().border(flow(theme.state.borderColor, (color) => \`2px solid \${color}\`))}>
      </div>
      
      <div css={select().border(flow(theme.state.borderColor, (color) => \`2px solid \${color + v}\`))}>
      </div>
    </>
  )
}

    
 ↓ ↓ ↓ ↓ ↓ ↓

import { theme as _theme } from \\"@querycap-ui/core\\";
import { fromTheme as _fromTheme } from \\"@querycap-ui/core\\";
import React from \\"react\\";
import { flow } from \\"lodash\\";

var __macro_generated_ref_0 = v =>
/*__THEME_NEED__*/
__macro_generated_t => ({
  border: _fromTheme(flow(_theme.state.borderColor, color => \`2px solid \${color + v}\`))(__macro_generated_t)
});

var __macro_generated_ref_1 =
/*__THEME_NEED__*/
__macro_generated_t => ({
  border: _fromTheme(flow(_theme.state.borderColor, color => \`2px solid \${color}\`))(__macro_generated_t)
});

const C = () => {
  const v = \\"red\\";
  return <>
      <div css={
    /*__THEME_NEED__*/
    __macro_generated_ref_1}>
      </div>
      
      <div css={
    /*__THEME_NEED__*/
    __macro_generated_ref_0(v)}>
      </div>
    </>;
};  
  "
`;

exports[`@querycap-ui/core/macro nests 1`] = `
"

import React from \\"react\\"
import { flow } from \\"lodash\\"
import { select, theme, animated, cover } from \\"@querycap-ui/core/macro\\"

const C = () => {
  const v = \\"red\\"

  return (
    <>
      <div css={select()
      .border(flow(theme.state.borderColor, (color) => \`2px solid \${color}\`))
      .padding(theme.space.s2)
      .display(\\"flex\\")
      .color(v)
      .with(select(\\"& > h2\\").color(\\"red\\"))
      .with(cover)
      .with({
        fontSize: 1,
      })
      .with(v && select().color(theme.state.color))
      .with(v || select().color(theme.state.color))
      .with(v ? undefined: select(\\"& > a\\").color(theme.state.color))}></div>
    </>
  )
}

const Animated = animated(C);

    
 ↓ ↓ ↓ ↓ ↓ ↓

import { cover as _cover } from \\"@querycap-ui/core\\";
import { animated as _animated } from \\"@querycap-ui/core\\";
import { theme as _theme } from \\"@querycap-ui/core\\";
import { selectKeys as _selectKeys } from \\"@querycap-ui/core\\";
import { fromTheme as _fromTheme } from \\"@querycap-ui/core\\";
import React from \\"react\\";
import { flow } from \\"lodash\\";

var __macro_generated_ref_0 =
/*__THEME_NEED__*/
__macro_generated_t => ({
  [_selectKeys(\\"& > a\\")]: {
    color: _fromTheme(_theme.state.color)(__macro_generated_t)
  }
});

var __macro_generated_ref_1 =
/*__THEME_NEED__*/
__macro_generated_t => ({
  color: _fromTheme(_theme.state.color)(__macro_generated_t)
});

var __macro_generated_ref_2 =
/*__THEME_NEED__*/
__macro_generated_t => ({
  color: _fromTheme(_theme.state.color)(__macro_generated_t)
});

var __macro_generated_ref_3 = {
  name: \\"tokvmb\\",
  styles: \\"color:red;\\"
};
var __macro_generated_ref_4 = {
  [_selectKeys(\\"& > h2\\")]: __macro_generated_ref_3
};
var __macro_generated_ref_5 = {
  name: \\"k008qs\\",
  styles: \\"display:flex;\\"
};

var __macro_generated_ref_6 = v =>
/*__THEME_NEED__*/
__macro_generated_t => [__macro_generated_ref_5, {
  border: _fromTheme(flow(_theme.state.borderColor, color => \`2px solid \${color}\`))(__macro_generated_t),
  padding: _fromTheme(_theme.space.s2)(__macro_generated_t),
  color: _fromTheme(v)(__macro_generated_t)
}, _fromTheme(__macro_generated_ref_4)(__macro_generated_t), _fromTheme(_cover)(__macro_generated_t), {
  fontSize: 1
}, _fromTheme(
/*__THEME_NEED__*/
v &&
/*__THEME_NEED__*/
__macro_generated_ref_2)(__macro_generated_t), _fromTheme(
/*__THEME_NEED__*/
v ||
/*__THEME_NEED__*/
__macro_generated_ref_1)(__macro_generated_t), _fromTheme(
/*__THEME_NEED__*/
v ? undefined :
/*__THEME_NEED__*/
__macro_generated_ref_0)(__macro_generated_t)];

const C = () => {
  const v = \\"red\\";
  return <>
      <div css={
    /*__THEME_NEED__*/
    __macro_generated_ref_6(v)}></div>
    </>;
};

const Animated = _animated(C);  
  "
`;

exports[`@querycap-ui/core/macro select 1`] = `
"

import React from \\"react\\"
import { select, OptionFocusedAttr } from \\"@querycap-ui/core/macro\\"

const v = \\"\\"

const C = () => {

  return (
    <>
      <div css={select()
      .with(select(\\"& > h1\\", \\"& > h2\\").color(\\"red\\").with(
        select(\`&[\${OptionFocusedAttr}=true]\`).color(\\"red\\")
      ))
      .with(select(v).color(\\"red\\"))
      .with(select().color(\\"red\\"))}></div>
    </>
  )
}

    
 ↓ ↓ ↓ ↓ ↓ ↓

import { OptionFocusedAttr as _OptionFocusedAttr } from \\"@querycap-ui/core\\";
import { fromTheme as _fromTheme } from \\"@querycap-ui/core\\";
import { selectKeys as _selectKeys } from \\"@querycap-ui/core\\";
import React from \\"react\\";
const v = \\"\\";
var __macro_generated_ref_0 = {
  name: \\"tokvmb\\",
  styles: \\"color:red;\\"
};
var __macro_generated_ref_1 = {
  name: \\"tokvmb\\",
  styles: \\"color:red;\\"
};
var __macro_generated_ref_2 = {
  [_selectKeys(v)]: __macro_generated_ref_1
};
var __macro_generated_ref_3 = {
  name: \\"tokvmb\\",
  styles: \\"color:red;\\"
};
var __macro_generated_ref_4 = {
  [_selectKeys(\`&[\${_OptionFocusedAttr}=true]\`)]: __macro_generated_ref_3
};
var __macro_generated_ref_5 = {
  name: \\"tokvmb\\",
  styles: \\"color:red;\\"
};

var __macro_generated_ref_6 =
/*__THEME_NEED__*/
__macro_generated_t => ({
  [_selectKeys(\\"& > h1\\", \\"& > h2\\")]: [__macro_generated_ref_5, _fromTheme(__macro_generated_ref_4)(__macro_generated_t)]
});

var __macro_generated_ref_7 =
/*__THEME_NEED__*/
__macro_generated_t => [_fromTheme(
/*__THEME_NEED__*/
__macro_generated_ref_6)(__macro_generated_t), _fromTheme(__macro_generated_ref_2)(__macro_generated_t), _fromTheme(__macro_generated_ref_0)(__macro_generated_t)];

const C = () => {
  return <>
      <div css={
    /*__THEME_NEED__*/
    __macro_generated_ref_7}></div>
    </>;
};  
  "
`;

exports[`@querycap-ui/core/macro simple 1`] = `
"

import React from \\"react\\"
import { select, animated } from \\"@querycap-ui/core/macro\\"
import { css } from \\"@emotion/core\\";

const v = css({ color: \\"red\\" })

const C = () => {
  return (
    <>
      <animated.div css={select().flex(1)}></animated.div>
    </>
  )
}
    
 ↓ ↓ ↓ ↓ ↓ ↓

import { animated as _animated } from \\"@querycap-ui/core\\";
import React from \\"react\\";
import { css } from \\"@emotion/core\\";
const v = {
  name: \\"4lnri7-v\\",
  styles: \\"color:red;;label:v;\\"
};
var __macro_generated_ref_0 = {
  name: \\"1rr4qq7\\",
  styles: \\"flex:1;\\"
};

const C = () => {
  return <>
      <_animated.div css={__macro_generated_ref_0}></_animated.div>
    </>;
};  
  "
`;

exports[`@querycap-ui/core/macro with variables 1`] = `
"

import React from \\"react\\"
import { select, theme } from \\"@querycap-ui/core/macro\\"

const C = () => {
  return (
    <>
      <div css={select().padding(theme.space.s2).display(\\"flex\\")}></div>
    </>
  )
}
    
 ↓ ↓ ↓ ↓ ↓ ↓

import { theme as _theme } from \\"@querycap-ui/core\\";
import { fromTheme as _fromTheme } from \\"@querycap-ui/core\\";
import React from \\"react\\";
var __macro_generated_ref_0 = {
  name: \\"k008qs\\",
  styles: \\"display:flex;\\"
};

var __macro_generated_ref_1 =
/*__THEME_NEED__*/
__macro_generated_t => [__macro_generated_ref_0, {
  padding: _fromTheme(_theme.space.s2)(__macro_generated_t)
}];

const C = () => {
  return <>
      <div css={
    /*__THEME_NEED__*/
    __macro_generated_ref_1}></div>
    </>;
};  
  "
`;
